--- a/static/custom_styles.css
+++ b/static/custom_styles.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #b0c4de;
 }
 
 .site-header .navbar-nav .nav-link:hover {
