--- a/templates/_incs/_navbar.html
+++ b/templates/_incs/_navbar.html
@@ -1,19 +1,19 @@
 <header class="site-header">
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
-      <a class="navbar-brand mr-4" href="/">EDMS</a>
+      <a class="navbar-brand mr-5" href="{{url_for('homepage')}}">EDMS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">
         <div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link" href="/">Home</a>
-          <a class="nav-item nav-link" href="/about">About EDMS</a>
+          <a class="nav-item nav-link" href="{{url_for('homepage')}}">Home</a>
+          <a class="nav-item nav-link" href="{{url_for('about')}}">About EDMS</a>
         </div>
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/login">User Login</a>
-          <a class="nav-item nav-link" href="/register">New user registration</a>
+          <a class="nav-item nav-link" href="{{url_for('user_login')}}">User Login</a>
+          <a class="nav-item nav-link" href="{{url_for('new_user_registration')}}">New user registration</a>
         </div>
       </div>
     </div>
