--- a/edms/static/custom_styles.css
+++ b/edms/static/custom_styles.css
@@ -1,6 +1,11 @@
+html{
+  height: 100%;
+  margin: 0;
+}
 body {
   background: #fafafa;
   color: #333333;
+  padding: 0;
   margin-top: 5rem;
 }
 
@@ -18,10 +23,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .site-header .navbar-nav .nav-link:hover {
   color: #ffffff;
+  font-weight: bolder;
 }
 
-.site-header .navbar-nav .nav-link.active {
-  font-weight: 500;
+.site-header .navbar-nav .nav-link:active {
+  font-weight: bolder;
 }
 
 .content-section {
@@ -78,3 +84,4 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
