--- a/edms/templates/_incs/_navbar.html
+++ b/edms/templates/_incs/_navbar.html
@@ -10,10 +10,17 @@
           <a class="nav-item nav-link" href="{{url_for('homepage')}}">Home</a>
           <a class="nav-item nav-link" href="{{url_for('about')}}">About EDMS</a>
         </div>
+
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="{{url_for('user_login')}}">User Login</a>
-          <a class="nav-item nav-link" href="{{url_for('new_user_registration')}}">New user registration</a>
+            {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{url_for('add_dataset')}}">New dataset</a>
+                <a class="nav-item nav-link" href="{{url_for('user_account')}}">Account</a>
+                <a class="nav-item nav-link" href="{{url_for('user_logout')}}">Logout</a>
+            {% else %}
+                <a class="nav-item nav-link" href="{{url_for('user_login')}}">User Login</a>
+                <a class="nav-item nav-link" href="{{url_for('new_user_registration')}}">New user registration</a>
+            {% endif %}
         </div>
       </div>
     </div>
