--- a/edms/templates/base.html
+++ b/edms/templates/base.html
@@ -27,7 +27,8 @@
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
-        {% with messages= get_flashed_messages(with_categories=true) %}
+        <!-- This handles the various alert messages and flash messages.-->
+        {% with messages = get_flashed_messages(with_categories=true) %}
 
            {% if messages %}
 
@@ -43,19 +44,20 @@
 
     <!-- This content block can be overridden by data from your custom pages -->
         {% block content %}
-
         {% endblock content %}
     </div>
+
+  <!-- This div-area handles the side-column that holds the ckan-wit resources -->
     <div class="col-md-4">
       <div class="content-section">
         <h5>Source dataset using ckan-wit</h5>
           <p class='text-muted'>
               <small>Installing the ckan-wit package into this CMS provides the add-on benefit of the source-dataset below</small>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a href="pages/ckan-wit/europe.html"> Europe's Datasets </a></li>
-            <li class="list-group-item list-group-item-light"><a href="pages/ckan-wit/europe.html"> America's Datasets  </a> </li>
-            <li class="list-group-item list-group-item-light"><a href="pages/ckan-wit/europe.html"> Africa's Datasets  </a></li>
-            <li class="list-group-item list-group-item-light"><a href="pages/ckan-wit/europe.html"> Asia's Datasets  </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('europe') }}"> Europe's Datasets </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('america') }}"> America's Datasets  </a> </li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('africa') }}"> Africa's Datasets  </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('asia') }}"> Asia's Datasets  </a></li>
           </ul>
         </p>
       </div>
