--- a/edms/templates/pages/new_user_registration.html
+++ b/edms/templates/pages/new_user_registration.html
@@ -3,12 +3,15 @@
 {% block content %}
     <div class="content-section">
         <form action="" method="post">
-            {{ form.hidden_tag() }}
+
+            {{ form.hidden_tag() }} <!-- This handles the CSRF with respect to forms -->
+
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Register to have full access to the EDMS capabilities</legend>
+
+                <!-- This username div -->
                 <div class="form-group">
                     {{ form.username.label(class='form-control-label') }}
-
                     {% if form.username.errors %}
                        {{ form.username(class='form-control form-control.lg is-invalid') }}
                         <div class="invalid-feedback">
@@ -19,9 +22,9 @@
                     {% else %}
                         {{ form.username(class='form-control form-control.lg') }}
                     {% endif %}
-
                 </div>
 
+                <!-- This Email div -->
                 <div class="form-group">
                     {{ form.email.label(class='form-control-label') }}
                     {% if form.email.errors %}
@@ -30,12 +33,13 @@
                             {% for error in form.email.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
-
                         </div>
                     {% else %}
                         {{ form.email(class='form-control form-control.lg') }}
                     {% endif %}
                 </div>
+
+                <!-- This Password div -->
                 <div class="form-group">
                     {{ form.password.label(class='form-control-label') }}
                     {% if form.password.errors %}
@@ -44,12 +48,13 @@
                             {% for error in form.password.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
-
                         </div>
                     {% else %}
                         {{ form.password(class='form-control form-control.lg') }}
                     {% endif %}
                 </div>
+
+                <!-- This confirm-password div -->
                 <div class="form-group">
                     {{ form.confirm_password.label(class='form-control-label') }}
                     {% if form.confirm_password.errors %}
@@ -58,21 +63,26 @@
                             {% for error in form.confirm_password.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
-
                         </div>
                     {% else %}
                         {{ form.confirm_password(class='form-control form-control.lg') }}
                     {% endif %}
                 </div>
+
             </fieldset>
+
+            <!-- This submit button for submitting the form -->
             <div class="form-group">
                     {{ form.submit(class='btn btn-outline-success btn-lg') }}
             </div>
         </form>
+
     </div>
+
+    <!-- This provides users the option to login -->
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account? <a href="{{ url_for('user_login') }}" class="ml-3"> Login </a>
+            Already have an account? <a href="{{ url_for('user_login') }}" class="ml-3"> Login here </a>
         </small>
     </div>
 {% endblock content %}
