--- a/edms/templates/pages/user_account.html
+++ b/edms/templates/pages/user_account.html
@@ -10,7 +10,7 @@
         </div>
 
     <!-- Form Object goes in here -->
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
 
             {{ form.hidden_tag() }} <!-- This handles the CSRF with respect to forms -->
 
@@ -43,6 +43,17 @@
                         </div>
                     {% else %}
                         {{ form.email(class='form-control form-control.lg') }}
+                    {% endif %}
+                </div>
+
+                <!-- Profile Picture edit -->
+                <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class='form-control-file') }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                                <span class="text-danger" >{{ error }}</span> <br>
+                        {% endfor %}
                     {% endif %}
                 </div>
             </fieldset>
