email, crud ops for dataset, resetpwd

--- a/edms/templates/pages/about.html
+++ b/edms/templates/pages/about.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>About EDMS</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consequatur dignissimos dolor earum et excepturi impedit iste itaque iure laborum maxime molestiae odio,
+        odit officia porro provident quibusdam rerum sapiente sed, sunt tenetur totam voluptatum? Architecto doloremque doloribus esse harum hic ipsum officiis quis voluptate?
+        Dolorem doloremque eveniet nisi pariatur?
+    </p>
 
 {% endblock content %}
