--- a/edms/templates/pages/user_datasets.html
+++ b/edms/templates/pages/user_datasets.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Enterprise Dataset Management System</h2>
+    <h2 class="mb-3">Datasets added by: {{ user.username }} ({{ datasets.total }}) </h2>
     <hr>
 
     {% for dataset in datasets.items %}
@@ -9,7 +9,7 @@
           <div class="media-body">
             <div class="article-metadata">
                 <small class="text-muted"> Owner: </small>
-                <a class="mr-2" href="{{ url_for('user_datasets', username=dataset.owner.username) }}"> {{ dataset.owner.username }}</a>
+                <a class="mr-2" href="{{url_for('user_datasets', username=dataset.owner.username)}}"> {{ dataset.owner.username }}</a>
                 <small class="text-muted">Date added: {{ dataset.date_added.strftime('%Y-%m-%d') }}</small>
             </div>
             <h2><a class="article-title" href="{{ url_for('dataset_details', dataset_id=dataset.id) }}">{{ dataset.name_or_title }}</a></h2>
@@ -24,10 +24,10 @@
     {% for page_number in datasets.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
         {% if page_number %}
             {% if datasets.page == page_number %}
-                <a href="{{ url_for('homepage', page=page_number) }}"
+                <a href="{{ url_for('user_datasets', username=user.username, page=page_number) }}"
                    class="btn btn-primary btn-sm mb-4">{{ page_number }}</a>
             {% else %}
-                <a href="{{ url_for('homepage', page=page_number) }}"
+                <a href="{{ url_for('user_datasets', username=user.username, page=page_number) }}"
                    class="btn btn-outline-primary btn-sm mb-4">{{ page_number }}</a>
             {% endif %}
         {% else %}
@@ -35,4 +35,3 @@
         {% endif %}
     {% endfor %}
 {% endblock content %}
-
