--- a/edms/templates/pages/user_login.html
+++ b/edms/templates/pages/user_login.html
@@ -42,10 +42,11 @@
             </fieldset>
             <div class="form-group">
                     {{ form.submit(class='btn btn-outline-success btn-lg') }}
+                    <small class="text-muted ml-2">
+                        <a href="{{ url_for('reset_password_request') }}">Forgot password?</a>
+                    </small>
             </div>
-            <small class="text-muted ml-2">
-                <a href="#">Forgot password?</a>
-            </small>
+
         </form>
     </div>
 
