--- a/edms/templates/pages/user_account.html
+++ b/edms/templates/pages/user_account.html
@@ -9,13 +9,12 @@
             </div>
         </div>
 
-    <!-- Form Object goes in here -->
+    <!-- Form Object goes in here. NB: dont forget to add the encoding type -- enctype -->
         <form action="" method="post" enctype="multipart/form-data">
-
             {{ form.hidden_tag() }} <!-- This handles the CSRF with respect to forms -->
 
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">User settings</legend>
+                <legend class="border-bottom mb-4">User Account Settings</legend>
                 <!-- This username div -->
                 <div class="form-group">
                     {{ form.username.label(class='form-control-label') }}
@@ -46,16 +45,18 @@
                     {% endif %}
                 </div>
 
-                <!-- Profile Picture edit -->
+                <hr style="border-color: #000080">
+                <!-- Profile Picture Edit -->
                 <div class="form-group">
                     {{ form.picture.label() }}
                     {{ form.picture(class='form-control-file') }}
                     {% if form.picture.errors %}
                         {% for error in form.picture.errors %}
-                                <span class="text-danger" >{{ error }}</span> <br>
+                                <span class="text-danger"> {{ error }} </span> <br>
                         {% endfor %}
                     {% endif %}
                 </div>
+                <hr style="border-color: #000080">
             </fieldset>
             <!-- This submit button for submitting the form -->
             <div class="form-group">
