error handlers, local storage, blueprints done

--- a/edms/templates/base.html
+++ b/edms/templates/base.html
@@ -54,10 +54,10 @@
           <p class='text-muted'>
               <small>Installing the ckan-wit package into this CMS provides the add-on benefit of the source-dataset below</small>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('europe') }}"> Europe's Datasets </a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('america') }}"> America's Datasets  </a> </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('africa') }}"> Africa's Datasets  </a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('asia') }}"> Asia's Datasets  </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('wit.europe') }}"> Europe's Datasets </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('wit.america') }}"> America's Datasets  </a> </li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('wit.africa') }}"> Africa's Datasets  </a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('wit.asia') }}"> Asia's Datasets  </a></li>
           </ul>
         </p>
       </div>
