--- a/edms/templates/pages/new_user_registration.html
+++ b/edms/templates/pages/new_user_registration.html
@@ -82,7 +82,7 @@
     <!-- This provides users the option to login -->
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already have an account? <a href="{{ url_for('user_login') }}" class="ml-3"> Login here </a>
+            Already have an account? <a href="{{ url_for('users.user_login') }}" class="ml-3"> Login here </a>
         </small>
     </div>
 {% endblock content %}
