--- a/edms/templates/_incs/_navbar.html
+++ b/edms/templates/_incs/_navbar.html
@@ -1,25 +1,25 @@
 <header class="site-header">
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
-      <a class="navbar-brand mr-5" href="{{url_for('homepage')}}">EDMS</a>
+      <a class="navbar-brand mr-5" href="{{url_for('main.homepage')}}">EDMS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">
         <div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link" href="{{url_for('homepage')}}">Home</a>
-          <a class="nav-item nav-link" href="{{url_for('about')}}">About EDMS</a>
+          <a class="nav-item nav-link" href="{{url_for('main.homepage')}}">Home</a>
+          <a class="nav-item nav-link" href="{{url_for('main.about')}}">About EDMS</a>
         </div>
 
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{url_for('add_dataset')}}">New dataset</a>
-                <a class="nav-item nav-link" href="{{url_for('user_account')}}">Account</a>
-                <a class="nav-item nav-link" href="{{url_for('user_logout')}}">Logout</a>
+                <a class="nav-item nav-link" href="{{url_for('datasets.add_dataset')}}">New dataset</a>
+                <a class="nav-item nav-link" href="{{url_for('users.user_account')}}">Account</a>
+                <a class="nav-item nav-link" href="{{url_for('users.user_logout')}}">Logout</a>
             {% else %}
-                <a class="nav-item nav-link" href="{{url_for('user_login')}}">User Login</a>
-                <a class="nav-item nav-link" href="{{url_for('new_user_registration')}}">New user registration</a>
+                <a class="nav-item nav-link" href="{{url_for('users.user_login')}}">User Login</a>
+                <a class="nav-item nav-link" href="{{url_for('users.new_user_registration')}}">New user registration</a>
             {% endif %}
         </div>
       </div>
